# GZ_DiNiu

./: AUTOSTART.md  CMD_VEL_CONTROL.md  README.md  steer_closed_loop  方向电机编码器  方向电机编码器.cpp  方向电机闭环  方向电机闭环 copy.cpp  方向电机闭环.cpp  方向电机驱动.cpp
docs/: steer_closed_loop_node.md
install/: local_setup.sh  setup.sh
install/encoder_vel/lib/encoder_vel/: encoder_vel_node  motor_control_node
install/encoder_vel/share/ament_index/resource_index/parent_prefix_path/: encoder_vel
install/encoder_vel/share/encoder_vel/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/encoder_vel/share/encoder_vel/cmake/: encoder_velConfig.cmake
install/imu_bno08x/lib/imu_bno08x/: imu_bno08x_node
install/imu_bno08x/share/imu_bno08x/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/motor_control_py/lib/motor_control_py/: motor_control_node  speed_plot_node  speed_web_node  steer_control_node
install/motor_control_py/share/motor_control_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_control_py/share/motor_control_py/launch/: bringup.launch.py  cmd_vel_full.launch.py
install/steer_closed_loop/lib/steer_closed_loop/: steer_closed_loop_node
install/steer_closed_loop/share/steer_closed_loop/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/steer_closed_loop/share/steer_closed_loop/cmake/: steer_closed_loopConfig.cmake
log/: latest_build
src/: README.md
src/encoder_vel/: CMakeLists.txt  package.xml
src/encoder_vel/src/: encoder_vel_node.cpp
src/imu_bno08x/: package.xml  setup.py
src/motor_control_py/: package.xml  setup.cfg  setup.py
src/motor_control_py/launch/: bringup.launch.py
src/motor_control_py/motor_control_py/: motor_control_node.py  speed_web_node.py  steer_control_node.py
src/motor_control_py/resource/: motor_control_py
src/steer_closed_loop/: CMakeLists.txt
src/steer_closed_loop/src/: steer_closed_loop_node.cpp
test/: pigpiod_gpio_test.py
