<?xml version="1.0"?>
<package format="3">
  <name>encoder_vel</name>
  <version>0.0.1</version>
  <description>Encoder-based linear velocity publisher using libgpiod.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
