<?xml version="1.0"?>
<package format="3">
  <name>motor_control_py</name>
  <version>0.0.1</version>
  <description>Python motor control node publishing hardware PWM via pigpio.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
